package view;

public interface Observer {

	public void updateTime(int time);

	public void updateFile(String newInfos);
	
}
